--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>GARENFEATHER</title>
+		<title>Guide Of GARENFEATHER.CN</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,25 +19,24 @@
 		<!-- Header -->
 			<header id="header" class="alt">
 				<h1><a href="index.html">GARENFEATHER</a></h1>
-				<a href="#nav">PROJECT</a>
+				<a href="#nav">Repo</a>
 			</header>
 
 		<!-- Nav -->
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="https://github.com/GARENFEATHER/hexo-filter-mermaid">Hexo-Filter-Mermaid</a></li>
 				</ul>
 			</nav>
 
 		<!-- Banner -->
 			<section id="banner">
 				<i class="icon fa-diamond"></i>
-				<h2>Garen (Feather/Rhine)</h2>
-				<p>Magna feugiat lorem dolor egestas</p>
+				<h2>Hey Guys! There!</h2>
+				<p>You're Stuck in Heavy Fog, try leaving immediately</p>
 				<ul class="actions">
-					<li><a href="#" class="button big special">Learn More</a></li>
+					<li><a href="#" class="button big special">I'm Leaving Now</a></li>
 				</ul>
 			</section>
 
@@ -47,11 +46,21 @@
 					<article class="feature left">
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 						<div class="content">
-							<h2>Integer vitae libero acrisus egestas placerat  sollicitudin</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+							<h2>ghost.garenfeather.cn driven by ghost</h2>
+							<p>
+								A more <b>mobile-friendly</b> version <b>blog</b>.
+								<br>
+								Only <b>English search</b> works fine.
+								<br>
+								Has no timeline or archives or categories.
+								<br>
+								<b>Refresh</b> frequently is recommended.
+								<br>
+								<b>GarenRhine</b> == GarenFeather you know.
+							</p>
 							<ul class="actions">
 								<li>
-									<a href="#" class="button alt">More</a>
+									<a href="http://ghost.garenfeather.cn" class="button alt" target="_blank">Go Straight On!</a>
 								</li>
 							</ul>
 						</div>
@@ -59,11 +68,21 @@
 					<article class="feature right">
 						<span class="image"><img src="images/pic02.jpg" alt="" /></span>
 						<div class="content">
-							<h2>Integer vitae libero acrisus egestas placerat  sollicitudin</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+							<h2>blog.garenfeather.cn driven by hexo</h2>
+							<p>
+								A better management version <b>blog</b>.
+								<br>
+								A little <b>worse margin style</b> on mobile devices.
+								<br>
+								Better <b>search</b> result with Algolia engine.
+								<br>
+								Keywords are written in <b>Japanese</b>.
+								<br>
+								<b>GarenRhine</b> == GarenFeather you know right?
+							</p>
 							<ul class="actions">
 								<li>
-									<a href="#" class="button alt">More</a>
+									<a href="https://blog.garenfeather.cn" class="button alt" target="_blank">Just Have A Look!</a>
 								</li>
 							</ul>
 						</div>
@@ -75,7 +94,7 @@
 			<footer id="footer">
 				<div class="inner">
 					<ul class="copyright">
-						<li>&copy; Untitled.</li>
+						<li>&copy; GARENFEATHER</li>
 						<li>Images: <a href="http://unsplash.com">Unsplash</a>.</li>
 						<li>Design: <a href="http://templated.co">TEMPLATED</a>.</li>
 					</ul>
