--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 			<script src="assets/js/main.js"></script>
 			<script type="text/javascript">
 				window.onload = function(){
-					var button = document.getElementById('randomButton')[0];
+					var button = document.getElementById('randomButton');
 					if(Math.ceil(Math.random()*100) % 2 == 0) {
 						button.setAttribute('href', 'http://ghost.garenfeather.cn')
 					} else {
