--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<article class="feature left">
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 						<div class="content">
-							<h2>ghost.garenfeather.cn driven by ghost</h2>
+							<h2>dynamic blog driven by ghost</h2>
 							<p>
 								A more <b>mobile-friendly</b> version <b>blog</b>.
 								<br>
@@ -69,7 +69,7 @@
 					<article class="feature right">
 						<span class="image"><img src="images/pic02.jpg" alt="" /></span>
 						<div class="content">
-							<h2>blog.garenfeather.cn driven by hexo</h2>
+							<h2>static blog driven by hexo</h2>
 							<p>
 								A better management version <b>blog</b>.
 								<br>
