--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="https://github.com/GARENFEATHER/hexo-filter-mermaid">Hexo-Filter-Mermaid</a></li>
+					<li><a href="https://njucourses.herokuapp.com">searchNJU</a></li>
 				</ul>
 			</nav>
 
