--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		
+		<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="b5acaccf-de9c-404d-8650-7862f4c7c223";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();
+		</script>
 	</head>
 	<body class="landing">
 
