--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="b5acaccf-de9c-404d-8650-7862f4c7c223";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();
 		</script>
+        <div class="pubble-app" data-app-id="47710" data-app-identifier="47710"></div>
+        <script type="text/javascript" src="https://cdn.pubble.io/javascript/loader.js" defer></script>
 	</head>
 	<body class="landing">
 
