--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 							</p>
 							<ul class="actions">
 								<li>
-									<a style="color:#CD5C5C !important;box-shadow:inset 0 0 0 2px #CD5C5C" href="https://blog.garenfeather.cn" class="button alt" target="_blank">Mataining! Stop Please!</a>
+									<a style="color:#CD5C5C !important;box-shadow:inset 0 0 0 2px #CD5C5C" href="https://blog.garenfeather.cn" class="button alt" target="_blank">Mataining! Wait Please!</a>
 								</li>
 							</ul>
 						</div>
